# FullMonteSW

./: .gitignore  AccumulationArray.hpp  Adaptors.hpp  BGLMesh.cpp  BGLMesh.hpp  BLIKernel.cpp  BLIKernel.i  CMakeLists.txt  Config.h.in  DVH.cpp  DVH.hpp  DVHElement.hpp  DVHGenerate.cpp  Doxyfile  Export_VTK_XML.cpp  Export_VTK_XML.hpp  FindANTLR3.cmake  FindANTLR3C.cmake  FullMonte.hpp  FullMonteSWConfig.cmake.in  GenDVH.cpp  LineSourceEmitter.hpp  LocalObserver.cpp  LocalObserver.hpp  Logger.hpp  LoggerConservation.cpp  LoggerConservation.hpp  LoggerEvent.cpp  LoggerEvent.hpp  LoggerMemTrace.cpp  LoggerMemTrace.hpp  LoggerSurface.cpp  LoggerSurface.hpp  LoggerTracer.hpp  LoggerVolume.cpp  LoggerVolume.hpp  MakeBin.tcl  Makefile  Makefile.in  Makefile.in~  (+167 more)
Geometry/: Basis.cpp  Basis.hpp  BasisIO.hpp  BoundingBox.hpp  CMakeLists.txt  CheckMesh.cpp  Convenience.hpp  Face.cpp  Face.hpp  FullMonteGeometry.i  FullMonteGeometry_types.i  Geometry.i  Geometry_types.i  ImplicitPlane.hpp  Makefile  Makefile~  Material.cpp  Material.hpp  MaterialSet.hpp  MeshChecker.cpp  MeshChecker.hpp  OrthoBoundingBox.hpp  Ray.hpp  RayWalk.cpp  RayWalk.hpp  SimpleMaterial.hpp  SourceDescription.cpp  SourceDescription.hpp  StandardArrayKernel.hpp  Test_Basis.cpp  Test_Placement.cpp  Test_RayWalk.cpp  Tetra.hpp  TetraMesh.cpp  TetraMesh.cpp~  TetraMesh.hpp  TetraMeshBase.cpp  TetraMeshBase.hpp  TriSurf.hpp  VectorTest.hpp  (+5 more)
Geometry/Filters/: FilterBase.hpp  PlaneCrossingFilter.cpp  PlaneCrossingFilter.hpp  TetraFilterByRegion.cpp  TetraFilterByRegion.hpp  TetraMeshBaseFilter.cpp  TetraMeshBaseFilter.hpp  TetraMeshFilter.cpp  TetraMeshFilter.hpp  TetraMeshFilterBase.cpp  TetraMeshFilterBase.hpp  TetrasNearPoint.cpp  TetrasNearPoint.hpp  TriFilterRegionBounds.cpp  TriFilterRegionBounds.hpp
Geometry/Modifiers/: AffineTransform.hpp  CMakeLists.txt  Test_AffineTransform.cpp
Geometry/Placement/: CMakeLists.txt  PlacementBase.cpp  PlacementBase.hpp  PlacementMediatorBase.cpp  PlacementMediatorBase.hpp  PlanePlacement.cpp  PlanePlacement.hpp  PlanePlacementLineSource.cpp  PlanePlacementLineSource.hpp  PlanePlacementPencilBeam.cpp  PlanePlacementPencilBeam.hpp  PlanePlacementSurfaceDetector.hpp  vtkFullMontePlanePlacement.h
Geometry/Sources/: Abstract.cpp  Abstract.hpp  Ball.hpp  Base.hpp  Composite.hpp  Cone.hpp  Directed.hpp  Disk.hpp  ForwardDecl.hpp  Line.hpp  PencilBeam.hpp  Point.hpp  PointSource.hpp  Print.cpp  Print.hpp  Surface.hpp  SurfaceTri.hpp  Visitor.hpp  Volume.hpp
Geometry/Units/: BaseUnit.cpp  BaseUnit.hpp  CMakeLists.txt  PrefixedUnit.cpp  PrefixedUnit.hpp  Quantity.cpp  Quantity.hpp  SI.hpp  Unit.cpp  Unit.hpp  UnitPrefix.cpp  UnitPrefix.hpp  UnitSystem.hpp  UnitsTest.cpp
Kernels/: BLIKernel.cpp  CMakeLists.txt  Event.hpp  FullMonteKernels.i  Kernel.cpp  Kernel.hpp  Kernel.hpp~  KernelObserver.hpp  MCKernelBase.hpp  Makefile  Makefile~  OStreamObserver.cpp  OStreamObserver.hpp  TestBLI.tcl  TetraKernelBase.cpp  TetraKernelBase.hpp  VolumeKernel.cpp
Kernels/Software/: AccumulationArray.hpp  AutoStreamBuffer.hpp  BlockRNGAdaptor.hpp  BlockRandomDistribution.hpp  CMakeLists.txt  FloatPM1Distribution.hpp  FloatU01Distribution.hpp  FloatUVect2Distribution.hpp  FloatUnitExpDistribution.hpp  FloatVectorBase.cpp  FloatVectorBase.hpp  FullMonte.cpp  FullMonte.hpp  FullMonteSWKernel.i  HenyeyGreenstein.cpp  HenyeyGreenstein.hpp  LineSourceEmitter.hpp  Logger.hpp  LoggerConservation.hpp  LoggerMemTrace.cpp  LoggerSurface.cpp  LoggerSurface.hpp  LoggerVolume.hpp  Makefile  Material.cpp  Material.hpp  Observer.hpp  Packet.cpp  Packet.hpp  PacketDirection.cpp  PacketDirection.hpp  RNG_SFMT_AVX.hpp  RandomAVX.cpp  RandomAVX.hpp  SFMTWrapper.hpp  SSEConvert.hpp  SSEMath.cpp  SSEMath.hpp  (+37 more)
OutputTypes/: AbsorptionSum.cpp  AbsorptionSum.hpp  AbstractSpatialMap.cpp  AbstractSpatialMap.hpp  CMakeLists.txt  CrossingFluence.hpp  DenseVector.hpp  DirectedSurfaceElement.hpp  DirectionalSurface.cpp  DirectionalSurface.hpp  DoseSurfaceHistogramGenerator.cpp  DoseSurfaceHistogramGenerator.hpp  DoseVolumeHistogramGenerator.hpp  EmpiricalCDF.cpp  EmpiricalCDF.hpp  FluenceConverter.cpp  FluenceConverter.hpp  FluenceLineQuery.cpp  FluenceLineQuery.hpp  FluenceMapBase.hpp  FullMonteData.i  InternalSurface.hpp  MCConservationCounts.cpp  MCConservationCounts.hpp  MCEventCounts.cpp  MCEventCounts.hpp  Makefile  MemTrace.hpp  OutputData.cpp  OutputData.hpp  OutputDataSummarize.cpp  OutputDataSummarize.hpp  PacketPositionTrace.cpp  PacketPositionTrace.hpp  PacketPositionTraceSet.cpp  PacketPositionTraceSet.hpp  PacketTrace.hpp  PosTrace.hpp  SparseBase.hpp  SparseVector.hpp  (+18 more)
Queries/: AbsorptionSum.cpp  AbsorptionSum.hpp  CMakeLists.txt  DirectionalSurface.cpp  DirectionalSurface.hpp  DoseHistogram.hpp  DoseHistogramGenerator.cpp  DoseHistogramGenerator.hpp  DoseVolumeHistogramGenerator.cpp  DoseVolumeHistogramGenerator.hpp  EmpiricalCDF.cpp  EmpiricalCDF.hpp  EnergyToFluence.cpp  EnergyToFluence.hpp  FluenceLineQuery.cpp  FluenceLineQuery.hpp  FullMonteQueries.i  UnitConverter.hpp
VTK/: .gitignore  CMakeLists.txt  FullMonteVTK.cpp  FullMonteVTK.cpp~  FullMonteVTK.hpp  FullMonteVTK.hpp~  FullMonteVTK.i  FullMonteVTKTCLInit.cxx  FullMonteVTK_wrap.cxx~  Makefile  Makefile~  PacketPositionTraceVTK.cpp  PacketPositionTraceVTK.hpp  PointSourceRep.cpp  PointSourceRep.h  SparseVectorVTK.cpp  SparseVectorVTK.h  SwigWrapping.cpp  SwigWrapping.hpp  TetraMeshBaseVTK.cpp  TetraMeshBaseVTK.h  TetraMeshRegionsVTK.cpp  TetraMeshRegionsVTK.hpp  TetraMeshTCL.cpp  TetraMeshVTK.cpp  TetraMeshVTK.h  UseVTKWrapTcl.cmake  test_SourceExport.tcl  testmouse.tcl  testmouse.tcl~  testpdt.tcl  vtkDoseHistogramWrapper.cpp  vtkDoseHistogramWrapper.h  vtkFullMonteArrayAdaptor.cpp  vtkFullMonteArrayAdaptor.h  vtkFullMonteFilterTovtkIdList.cpp  vtkFullMonteFilterTovtkIdList.h  vtkFullMonteFluenceLineQueryWrapper.cpp  vtkFullMonteFluenceLineQueryWrapper.h  vtkFullMontePacketPositionTraceSetToPolyData.cpp  (+11 more)
vis/: .gitignore  CMakeLists.txt  RenderDiff.cpp  SurfaceRender.cpp  fm_vtk.hpp  opacity.tcl  test.sh  traces.tcl  vtktest.tcl  wireframe.tcl
(+369 files in other folders)
