PROJECT(FullMonte)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)


## Boost setup
FIND_PACKAGE(Boost 1.58.0 REQUIRED COMPONENTS unit_test_framework serialization system program_options timer)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

## Include dirs for FullMonte
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/..)



SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

## Compiler setup
SET(CMAKE_CXX_STANDARD 11)

### Architecture
SET(ARCH AVX2 CACHE STRING "Architecture flag for -m option")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-missing-braces")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

SET(ANTLR_INCLUDE_DIR /usr/local/include)
SET(ANTLR_LIB_DIR /usr/local/lib)
SET(ANTLR3_JAR ~/PhD_Research/ANTLR3/antlr-3.5.2-complete.jar)


MESSAGE("Arch: ${ARCH}")

## Require .so extension (Mac likes to make it .dylib, causing a lot of the TCL scripts to bomb)

IF(APPLE)
    SET(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
ENDIF()

IF("${ARCH}" STREQUAL "AVX2")
    ADD_DEFINITIONS(-DUSE_AVX2 -DHAVE_AVX2)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mavx -msse4.1")
ELSEIF("${ARCH}" STREQUAL "avx")
    ADD_DEFINITIONS(-DUSE_AVX -DHAVE_AVX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -msse4.1")
ENDIF()

### Warnings and esoteric settings
IF(${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
    # Required to avoid an error in colliding mangled names
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fabi-version=6")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-psabi")
ELSEIF(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
    # Required to avoid all kinds of (harmless) warnings due to Boost concept checks
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedef")
ENDIF()


MESSAGE("Compiler ID: '${CMAKE_CXX_COMPILER_ID}' with flags '${CMAKE_CXX_FLAGS}'")

GET_DIRECTORY_PROPERTY(DPROPS COMPILE_DEFINITIONS)
MESSAGE("Compile_definitions: ${DPROPS}")




###### TCL Wrapping
OPTION(WRAP_TCL ON)

IF(WRAP_TCL)
    FIND_PACKAGE(SWIG REQUIRED)
    INCLUDE(${SWIG_USE_FILE})
    
    SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -Wall)

	FIND_PACKAGE(TCL REQUIRED)
	INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
	
	## TCL stubs screws up the VTK TCL bindings because VTK has its own statically-linked Tcl lib that it references 
    #FIND_PACKAGE(TclStub REQUIRED)
    #ADD_DEFINITIONS(-DUSE_TCL_STUBS)
ENDIF()


###### VTK bindings
OPTION(WRAP_VTK ON)

IF (WRAP_VTK)
    SET(VTK_DIR /usr/local/lib/cmake/vtk-6.3)
	FIND_PACKAGE(VTK REQUIRED)
	INCLUDE(${VTK_USE_FILE})
	ADD_SUBDIRECTORY(VTK)
ENDIF()



SET(TEST_THREAD_COUNT 8 CACHE STRING "Number of threads for test cases")


###### Build the program

ADD_SUBDIRECTORY(SFMT)
ADD_SUBDIRECTORY(Geometry)
ADD_SUBDIRECTORY(Storage)
ADD_SUBDIRECTORY(Kernels)
ADD_SUBDIRECTORY(OutputTypes)
ADD_SUBDIRECTORY(Queries)
ADD_SUBDIRECTORY(Examples)


###### Configure the run scripts

CONFIGURE_FILE(tclmonte.sh.in ${CMAKE_CURRENT_SOURCE_DIR}/tclmonte.sh)
FILE(COPY tclmonte.sh DESTINATION ${CMAKE_BINARY_DIR}/bin FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)

CONFIGURE_FILE(tclmontevtk.sh.in ${CMAKE_CURRENT_SOURCE_DIR}/tclmontevtk.sh)
FILE(COPY tclmontevtk.sh DESTINATION ${CMAKE_BINARY_DIR}/bin FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)

CONFIGURE_FILE(tclmontevtk_gdb.sh.in ${CMAKE_CURRENT_SOURCE_DIR}/tclmontevtk_gdb.sh)
FILE(COPY tclmontevtk_gdb.sh DESTINATION ${CMAKE_BINARY_DIR}/bin FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)

#CONFIGURE_FILE(tclmontevtk.sh.install.in ${CMAKE_CURRENT_SOURCE_DIR}/tclvtk.sh.install)
#INSTALL(PROGRAMS tclvtk.sh.install
#    DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
#    RENAME tclvtk.sh)



###### Configure headers to point to data (for test cases)

FILE(MAKE_DIRECTORY FullMonteSW)

SET(FULLMONTE_CONFIG_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
CONFIGURE_FILE(Config.h.in ${CMAKE_BINARY_DIR}/FullMonteSW/Config.h)

SET(FULLMONTE_CONFIG_DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/data)
CONFIGURE_FILE(Config.h.in ${CMAKE_BINARY_DIR}/FullMonteSW/Config.install.h)



###### Create CMake config files

SET(FULLMONTE_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/..;${CMAKE_BINARY_DIR}")
SET(FULLMONTE_LIBRARY_DIRS ${CMAKE_BINARY_DIR}/lib)
CONFIGURE_FILE(FullMonteSWConfig.cmake.in FullMonteSWConfig.cmake)

SET(FULLMONTE_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
SET(FULLMONTE_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
CONFIGURE_FILE(FullMonteSWConfig.cmake.in FullMonteSWConfig.install.cmake)

