FIND_PACKAGE(Perl REQUIRED)

FIND_PACKAGE(Java REQUIRED)

FUNCTION (ADD_ANTLR3_PARSER GRAMMAR)

    SET_SOURCE_FILES_PROPERTIES(${GRAMMAR}Parser.c ${GRAMMAR}Lexer.c PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function")
    SET_SOURCE_FILES_PROPERTIES(${GRAMMAR}Parser.c ${GRAMMAR}Lexer.c PROPERTIES COMPILE_DEFINITIONS "${COMPILE_DEFINITIONS};_empty=NULL")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${GRAMMAR}Parser.c ${GRAMMAR}Lexer.c ${GRAMMAR}Parser.h ${GRAMMAR}Lexer.h ${GRAMMAR}.tokens
        COMMAND ${Java_JAVA_EXECUTABLE} -jar ${ANTLR_JAR} -o ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/${GRAMMAR}.g 2>&1
        DEPENDS ${GRAMMAR}.g
        )

    ADD_CUSTOM_COMMAND(
        OUTPUT ${GRAMMAR}_tokens.h
        COMMAND ${PERL_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/../CommonParser/mktok.pl ${CMAKE_CURRENT_BINARY_DIR}/${GRAMMAR}.tokens > ${GRAMMAR}_tokens.h
        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../CommonParser/mktok.pl ${GRAMMAR}.tokens
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )

	ADD_CUSTOM_TARGET(grammar DEPENDS ${GRAMMAR}_tokens.h)

ENDFUNCTION()

ADD_ANTLR3_PARSER(TIMOS)

INCLUDE_DIRECTORIES(${ANTLR3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
LINK_DIRECTORIES(${ANTLR3_LIB_DIR})

ADD_LIBRARY(FullMonteTIMOS SHARED TIMOSParser.c TIMOSLexer.c TIMOSWriter.cpp TIMOSReader.cpp TIMOSAntlrParser.cpp TIMOS.cpp)
TARGET_LINK_LIBRARIES(FullMonteTIMOS antlr3c FullMonteGeometry)

ADD_DEPENDENCIES(FullMonteTIMOS grammar)

IF(WRAP_TCL)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
	LINK_DIRECTORIES(${ANTLR3_LIB_DIR})

    SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES CPLUSPLUS ON)
	SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES OBJECT_DEPENDS "TIMOS.hpp;TIMOSWriter.hpp;TIMOSReader.hpp")
    SWIG_ADD_MODULE(FullMonteTIMOSTCL tcl FullMonteTIMOS.i)
    SWIG_LINK_LIBRARIES(FullMonteTIMOSTCL FullMonteTIMOS ${TCL_STUB_LIBRARY})
ENDIF()
