INCLUDE(../CommonParser/ANTLR3.cmake)

ADD_ANTLR3_PARSER(TIMOS)

INCLUDE_DIRECTORIES(${ANTLR3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
LINK_DIRECTORIES(${ANTLR3_LIB_DIR})

ADD_LIBRARY(FullMonteTIMOS SHARED TIMOSParser.c TIMOSLexer.c TIMOSWriter.cpp TIMOSReader.cpp TIMOSAntlrParser.cpp TIMOS.cpp)
TARGET_LINK_LIBRARIES(FullMonteTIMOS antlr3c FullMonteGeometry)

ADD_DEPENDENCIES(FullMonteTIMOS TIMOSParser)

IF(WRAP_TCL)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
	LINK_DIRECTORIES(${ANTLR3_LIB_DIR})

    SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES CPLUSPLUS ON)
	SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES OBJECT_DEPENDS "TIMOS.hpp;TIMOSWriter.hpp;TIMOSReader.hpp")
    SWIG_ADD_MODULE(FullMonteTIMOSTCL tcl FullMonteTIMOS.i)
    SWIG_LINK_LIBRARIES(FullMonteTIMOSTCL FullMonteTIMOS ${TCL_STUB_LIBRARY} FullMonteGeometry)
ENDIF()
