FIND_PACKAGE(ANTLR3C REQUIRED)
INCLUDE(${ANTLR3C_USE_FILE})

ADD_ANTLR3C_PARSER(TIMOS)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(FullMonteTIMOS SHARED TIMOSParser.c TIMOSLexer.c TIMOSWriter.cpp TIMOSReader.cpp TIMOSAntlrParser.cpp TIMOS.cpp)
ADD_DEPENDENCIES(FullMonteTIMOS TIMOSParser)
TARGET_LINK_LIBRARIES(FullMonteTIMOS ${ANTLR3C_LIBRARY} FullMonteGeometry)

IF(WRAP_TCL)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

    SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES CPLUSPLUS ON)
	SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES OBJECT_DEPENDS "TIMOS.hpp;TIMOSWriter.hpp;TIMOSReader.hpp")
    SWIG_ADD_MODULE(FullMonteTIMOSTCL tcl FullMonteTIMOS.i)
    SWIG_LINK_LIBRARIES(FullMonteTIMOSTCL FullMonteTIMOS ${TCL_LIBRARY} FullMonteGeometry)

	INSTALL(TARGETS FullMonteTIMOSTCL
		LIBRARY
		DESTINATION lib)
ENDIF()

install(TARGETS FullMonteTIMOS
	LIBRARY
	DESTINATION lib)
