ADD_LIBRARY(FullMonteTextFile SHARED TextFileWriter.cpp TextFileMeshWriter.cpp TextFile.cpp)

IF(WRAP_TCL)
	SET_SOURCE_FILES_PROPERTIES(TextFile.i PROPERTIES CPLUSPLUS ON)
	SWIG_ADD_MODULE(FullMonteTextFileTCL tcl TextFile.i)
	SWIG_LINK_LIBRARIES(FullMonteTextFileTCL ${TCL_LIBRARY} FullMonteTextFile)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
	
	INSTALL(TARGETS FullMonteTextFileTCL DESTINATION lib)
ENDIF()

TARGET_LINK_LIBRARIES(FullMonteTextFile FullMonteGeometry)

INSTALL(TARGETS FullMonteTextFile
	DESTINATION lib)